# euribor-tracking-backend

./: .gitignore  pyproject.toml
.github/workflows/: daily_sync.yml
src/: bde_client.py  repository.py  sync.py
supabase/migrations/: 20260529000000_create_euribor_rates.sql  20260529000001_monthly_avg_function.sql  20260529000002_get_euribor_stats.sql  20260530000000_cache_euribor_stats.sql
